# libopenaptx

./: Makefile  README  get-version.py  meson.build  meson_options.txt  openaptx.c  openaptx.h  openaptxdec.c  openaptxenc.c
